otros 15 para acomodar un poco mi desm... :V

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="parentescoFamiliar">Parentesco:</string>
     <string name="telefonoFamiliar">Telefono:</string>
     <string name="celularFamiliar">Celular:</string>
+    <string name="agreagarLista">AGREGAR</string>
 </resources>
